@@ -2208,20 +2208,44 @@
   (should-equal 'd (compat-call alist-get 2 '((1 . a) (2 . b) (3 . c)) 'd nil #'ignore)))
 
 (ert-deftest alist-get-gv ()
-  (let ((alist-1 (list (cons 1 "one")
-                       (cons 2 "two")
-                       (cons 3 "three")))
-        (alist-2 (list (cons "one" 1)
-                       (cons "two" 2)
-                       (cons "three" 3))))
+  (let ((alist (list (cons 1 "one")
+                     (cons 2 "two")
+                     (cons 3 "three"))))
+    (setf (alist-get 1 alist) "eins")
+    (should-equal (alist-get 1 alist) "eins")
+    (setf (alist-get 2 alist nil 'remove) nil)
+    (should-equal alist '((1 . "eins") (3 . "three"))))
+  (let ((alist (list (cons 1 "one")
+                     (cons 2 "two")
+                     (cons 3 "three"))))
+    (setf (compat-call alist-get 1 alist) "eins")
+    (should-equal (compat-call alist-get 1 alist) "eins")
+    (setf (compat-call alist-get 2 alist nil 'remove) nil)
+    (should-equal alist '((1 . "eins") (3 . "three"))))
+  (let ((alist (list (cons "one" 1)
+                     (cons "two" 2)
+                     (cons "three" 3))))
+    (setf (compat-call alist-get "one" alist nil nil #'string=) "eins")
+    (should-equal (compat-call alist-get "one" alist nil nil #'string=) "eins")
+    (should-equal alist '(("one" . "eins") ("two" . 2) ("three" . 3)))
+    (setf (compat-call alist-get "two" alist nil 'remove #'string=) nil)
+    (should-equal alist '(("one" . "eins") ("three" . 3)))))
 
-    (setf (compat-call alist-get 1 alist-1) "eins")
-    (should-equal (compat-call alist-get 1 alist-1) "eins")
-    (setf (compat-call alist-get 2 alist-1 nil 'remove) nil)
-    (should-equal alist-1 '((1 . "eins") (3 . "three")))
-    (setf (compat-call alist-get "one" alist-2 nil nil #'string=) "eins")
-    (should-equal (compat-call alist-get "one" alist-2 nil nil #'string=)
-                   "eins")))
+(ert-deftest plist-get-gv ()
+  (let ((plist '(1 "one" 2 "two" 3 "three")))
+    (setf (plist-get plist 1) "eins")
+    (should-equal (plist-get plist 1) "eins")
+    (setf (plist-get plist 2) nil)
+    (should-equal plist '(1 "eins" 2 nil 3 "three")))
+  (let ((plist '(1 "one" 2 "two" 3 "three")))
+    (setf (compat-call plist-get plist 1) "eins")
+    (should-equal (compat-call plist-get plist 1) "eins")
+    (setf (compat-call plist-get plist 2) nil)
+    (should-equal plist '(1 "eins" 2 nil 3 "three")))
+  (let ((plist '("one" 1 "two" 2 "three" 3)))
+    (setf (compat-call plist-get plist "one" #'string=) "eins")
+    (should-equal (compat-call plist-get plist "one" #'string=) "eins")
+    (should-equal plist '("one" "eins" "two" 2 "three" 3))))
 
 (ert-deftest prop-match ()
   (should (prop-match-p (make-prop-match)))
