@@ -7,6 +7,7 @@
 - compat-27: Add ~make-decoded-time~.
 - compat-28: Add ~color-dark-p~.
 - compat-28: Add ~with-window-non-dedicated~.
+- compat-29: Add ~plist-get~ generalized variable.
 
 * Release of "Compat" Version 29.1.2.0
 
